--- a/securityutils/build.xml
+++ b/securityutils/build.xml
@@ -253,6 +253,28 @@
         </delete>
         <echo message="+++++ Cleaned build environment"/>
     </target>
+    <target name="update-dependencies">
+    	<!-- Dependencies are:
+    	     * No dependencies
+    	-->
+    </target>
+	<target name="update-dependency">
+       <property name="cvs.command.module" value="checkout"/>
+       <available property="cvs.command.module" value="update -d"
+        	file="${securityservices.base}../${dependency.module.name}" type="dir"/>
+	   <cvs cvsRoot="${env.CVSROOT}" command="${cvs.command.module}"
+	           dest="${securityservices.base}../${dependency.module.name}"/>
+	   <ant antfile="build.xml"
+	   	    dir="${securityservices.base}../${dependency.module.name}"
+	   	    inheritAll="false"
+	   	    target="with-depend-update">
+	   </ant>
+	   <copy file="${securityservices.base}../${dependency.module.name}/classes/signed/${dependency.module.jar}"
+		    toDir="${securityservices.base}/lib/security">
+	   </copy>
+    </target>
+    <!-- use 'ant with-update' to update repository executing the ALL target -->
+    <target name="with-depend-update" depends="update-dependencies, all"/>
 
  </project>
 
