Updated superior dependency (moptools and securemonitoring depend on this module)

--- a/securityutils/build.properties
+++ b/securityutils/build.properties
@@ -17,5 +17,5 @@ jar.signer.key=securitymodule
 module.subordinates=
 
 # The modules listed in the "module.superiors" property depend on this module.
-module.superiors=securityservices
+module.superiors=securityservices,securemonitoring,moptools
 
