*** empty log message ***

--- a/securityutils/.classpath
+++ b/securityutils/.classpath
@@ -3,5 +3,57 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="com.cougaarsoftware.cougaar.ide.core.COUGAAR_CONTAINER"/>
-	<classpathentry kind="output" path="classes"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/antlr.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/chart.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/concurrent.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/fesi-111.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/grappa1_2.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/hsqldb.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/icu4j.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/jakarta-oro-2.0.5.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/jcchart.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/jena.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/jpython.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/juddi.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/junit.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/log4j.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/mm-mysql-2.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/openmap.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/quoSumo.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/rdf-api-2001-01-19.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/servlet.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/silk.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/tomcat_40.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/tools.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/uddi4j.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/vgj.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/vishnuServer.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/sys/xml-apis.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/aggagent.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/albbn.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/bootstrap.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/community.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/contract.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/core.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/csmart.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/datagrabber.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/glm.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/javaiopatch.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/mtsstd.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/ping.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/planning.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/qos.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/quo.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/server.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/servicediscovery.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/stoplight.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/toolkit.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/uiframework.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/util.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/vishnu.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/webserver.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/webtomcat.jar"/>
+	<classpathentry kind="lib" path="C:/UL/cougaar-b11_2-1109/lib/yp.jar"/>
+	<classpathentry kind="output" path="tmp1"/>
 </classpath>
