--- a/securityutils/build.properties
+++ b/securityutils/build.properties
@@ -17,5 +17,5 @@ jar.signer.key=securitymodule
 module.subordinates=
 
 # The modules listed in the "module.superiors" property depend on this module.
-module.superiors=fwsupport,securityservices,dataprotection,securemonitoring,moptools
+module.superiors=fwsupport,securityservices,dataprotection,securemonitoring,moptools,certauthority
 
