--- a/securityutils/build.properties
+++ b/securityutils/build.properties
@@ -19,3 +19,4 @@ module.subordinates=
 # The modules listed in the "module.superiors" property depend on this module.
 module.superiors=fwsupport,securityservices,dataprotection,securemonitoring,moptools,certauthority
 
+cougaarforge.unixname=secureutil
